# fpattern

./: CMakeLists.txt  README.md
include/fpattern/: debug.h
src/: fpattern.c
